Prevent word wrapping in LoadingPlaceholder description

--- a/packages/slate-editor/src/components/LoadingPlaceholderV2/LoadingPlaceholderV2.scss
+++ b/packages/slate-editor/src/components/LoadingPlaceholderV2/LoadingPlaceholderV2.scss
@@ -27,6 +27,7 @@
         margin: $spacing-2 0;
         font-size: 13px;
         line-height: 18px;
+        white-space: nowrap;
     }
 
     &__message {
